Added a spinner for a dropdown menu for sorting. Couldnt figure out how to get it in the toolbar, so its simply at the top of the view for now.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
     <string name="app_name">Note Taking HW2</string>
+
+    <string-array name="search_types">
+        <item>Sort by Date</item>
+        <item>Sort by Mentions</item>
+        <item>Sort by Topics</item>
+        <item>Sort by Identifiers</item>
+        <item>Sort by References</item>
+
+    </string-array>
+
 </resources>
